--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title> To Do App </title>
+    <title> Dayo To-do App </title>
     <link href="https://fonts.googleapis.com/css?family=Lato:100" rel="stylesheet">
     <link href="/styles.css" rel="stylesheet">
 </head>
